# gs24-crawl-server

./: .dockerignore  .env  .gitignore  Dockerfile  \  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml  r.sh
apps/crawl/: apps.py  urls.py
apps/crawl/views/: news.py
apps/market_price/: apps.py  urls.py
apps/market_price/serializers/: carbon_price.py
apps/market_price/views/: carbon_price.py  exchange_rate.py
apps/naver_api/: apps.py  urls.py
apps/naver_api/serializers/: article.py
apps/naver_api/views/: 2.py  search_blog.py  search_cafe.py  search_news.py  sentiment.py
apps/stock/: urls.py
apps/stock/serializers/: financial_data.py  stock.py  stock_history.py
apps/stock/views/: financial.py  financial_data.py  invest_mixin.py  stock.py
config/: settings.py  urls.py
kafka/: consumer.py
kafka/consumer/: Dockerfile  consumer.py
kafka/producer/: Dockerfile  producer.py
